menu z-index fix

--- a/css/summerschool.css
+++ b/css/summerschool.css
@@ -97,6 +97,7 @@ HEADER
 */
 
 #header-bar {
+    padding-top: 30px;
     padding-bottom:21px;
 }
 
@@ -104,6 +105,9 @@ HEADER
     padding-top:20px;
     padding-bottom: 10px;
     background: #FFDA73;
+}
+#sticky-container {
+    z-index: 1000;
 }
 
 /*Logo*/
@@ -205,7 +209,7 @@ HEADER
 .menu-item a {
     color: black;
     text-transform: uppercase;
-    font-size:1.5rem;
+    font-size:1.3rem;
     font-weight: 400;
 }
 .menu-item a:visited,
